welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:6: error: type mismatch;
 found   : Unit
 required: Int
if ((speed>60 && speed<=80 && isBirthday == false) || (isBirthday == true && speed>65 && speed<=85))
^