welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
if ((speed <= 60 && isBirthday == false) || (isBirthday == true && speed<=65))
{
	return 0;
}
if ((speed>60 && speed<=80 && isBirthday == false) || (isBirthday == true && speed>65 && speed<=85))
{
	return 1;
}

}
